Port mutators and message signing to Volley for 3.5.4